[Finish]カリキュラム10

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10章【ハンバーガーメニューを作ってみよう】</title>
-    <link rel="stylesheet" href=""/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
     <h1>10章【ハンバーガーメニューを作ってみよう】</h1>
 
+<!--ハンバーガーメニューを表示するHTML部分-->
     <div id="sp-menu">
       <h2>MENU</h2>
       <ul>
@@ -20,6 +21,7 @@
       </ul>
     </div>
 
+<!--ハンバーガーアイコンのHTML部分-->
     <div id="hm-icon">
       <a class="menu-trigger" href="#">
         <span></span>
